# mlops

./: .gitignore  pyproject.toml  run_deployment.py  run_pipeline.py
.zen/: config.yaml
pipelines/: deployment_pipeline.py  training_pipeline.py
src/: data_cleaning.py  evaluation.py  model_dev.py
steps/: clean_data.py  config.py  eval_model.py  ingest_data.py  model_train.py
