[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.3",
    "mlflow>=2.19.0",
    "pandas>=2.2.3",
    "pydantic>=2.8.2",
    "rich>=13.9.4",
    "scikit-learn>=1.6.0",
    "zenml[server]>=0.71.0",
]
